# algorithmsAndDataStructures

./: .gitignore  README.md
classwork/: CMakeLists.txt
classwork/cw4/: cw4.cpp
classwork/cw5/: GenericStack.cpp
contests/contest1/: CMakeLists.txt  Task6.cpp  Task7.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp
contests/contest10/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TestD.txt
contests/contest11/: A.cpp  C.cpp  CMakeLists.txt
contests/contest2/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp  Test.h  TestClass.cpp
contests/contest3/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskF.cpp  TaskG.cpp
contests/contest4/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp
contests/contest5/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp
contests/contest6/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
contests/contest7/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp
contests/contest8/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp
contests/contest9/: CMakeLists.txt  TaskC.cpp
contests/sem2/01_Algo/: A.cpp  CMakeLists.txt
contests/sem2/02_Search/: A.cpp  B.cpp  CMakeLists.txt  test.cpp
contests/sem2/03_Iterative_Sortings/: A_bubble_sort.cpp  B_selection_sort.cpp  CMakeLists.txt  C_insertion_sort.cpp  D_insertion_sort_with_bubble_sort.cpp  E_taxi.cpp
contests/sem2/04_linear_sorts/: A.cpp  B.cpp  CMakeLists.txt  D.cpp  E.cpp
contests/sem2/05_pyramid_sorts/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp
contests/sem2/06_quickAndMergeSort/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  badSort.cpp
contests/sem2/06_quickAndMergeSort/F/: F.cpp  participant_solution.cpp  read-writer.h  student-ski.h
contests/sem2/07_Strings/: CMakeLists.txt  a.cpp
contests/sem2/08_Prefix_and_Aho-Korasik/: A.cpp  CMakeLists.txt
