cmake_minimum_required(VERSION 3.20)
project(contest2)

set(CMAKE_CXX_STANDARD 17)

add_executable(TaskA TaskA.cpp)
add_executable(TaskB TaskB.cpp)
add_executable(TaskC TaskC.cpp)
add_executable(TaskD TaskD.cpp)
add_executable(TaskE TaskE.cpp)
add_executable(TaskF TaskF.cpp)
add_executable(TaskG TaskG.cpp)
add_executable(TestClass TestClass.cpp)
